[gd_scene load_steps=25 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://web/WebInterface.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Common/Tooltip.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UI/menuButton.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/MenuButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainMenu/MainMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MainSession/MainSession.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Projects/ProjectsScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/ScenarioSelection/MapScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Team/TeamScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/HUD/Header.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Common/ActionScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/WinScreen/WinScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sounds/Land_of_8_Bits_-_Stephen_Bennett.mp3" type="AudioStream" id=15]
[ext_resource path="res://Sounds/key_up.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/key_down.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds.gd" type="Script" id=18]
[ext_resource path="res://Sounds/Boop.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/tick.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Cash-register-sound.mp3" type="AudioStream" id=21]
[ext_resource path="res://Scenes/Common/EventManager.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/MainMenu/PauseMenu.tscn" type="PackedScene" id=23]
[ext_resource path="res://Sounds/bell.mp3" type="AudioStream" id=24]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="WebInterface" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MainMenu" parent="." instance=ExtResource( 7 )]
visible = false

[node name="MapScreen" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Projects" parent="." instance=ExtResource( 9 )]
visible = false

[node name="MainSession" parent="." instance=ExtResource( 8 )]
visible = false

[node name="TeamScreen" parent="." instance=ExtResource( 11 )]
visible = false

[node name="ActionScreen" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Header" parent="." instance=ExtResource( 12 )]
visible = false

[node name="MM_Button" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 574.0
margin_top = 12.0
margin_right = 632.0
margin_bottom = 66.0
icon = ExtResource( 5 )
buttonText = ""
sPressed = ExtResource( 6 )
sReleased = ExtResource( 5 )

[node name="EventManager" parent="." instance=ExtResource( 22 )]
visible = false

[node name="Tooltip" parent="." instance=ExtResource( 4 )]
visible = false

[node name="WinScreen" parent="." instance=ExtResource( 14 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 23 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0
autoplay = true

[node name="Sounds" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="KeyUp" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )

[node name="KeyDown" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )

[node name="Boop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 19 )

[node name="Ding" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 24 )

[node name="Tick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 20 )

[node name="Ching" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 21 )

[connection signal="buttonPressed" from="MM_Button" to="." method="PauseGame" binds= [ true ]]
